<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/groupSelectionOneOnly"
            android:visible="false"
            android:enabled="true">
        <item android:id="@+id/menuReply"
                android:icon="@drawable/ic_reply"
                app:showAsAction="always"
                android:title="@string/reply" />
        <item android:id="@+id/menuCopy"
                android:icon="@drawable/ic_copy"
                app:showAsAction="always"
                android:title="@string/copy"
                tools:ignore="AlwaysShowAction" />
    </group>
    <group android:id="@+id/groupSelection"
            android:enabled="true">
        <item android:id="@+id/menuStar"
                android:icon="@drawable/ic_start"
                app:showAsAction="always"
                android:title="@string/star"/>
        <item android:id="@+id/menuDelete"
                android:icon="@drawable/ic_delete"
                app:showAsAction="always"
                android:title="@string/delete"/>
        <item android:id="@+id/menuForward"
                android:icon="@drawable/ic_forward"
                app:showAsAction="always"/>
    </group>
</menu>