<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutContact"
        android:layout_width="200dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/contactImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/padding_card_chat_list_half"
            tools:srcCompat="@tools:sample/avatars" />

    <TextView
            android:layout_margin="@dimen/margin_small"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/alan_maulana_r"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContactName" />

    <Button
            android:text="@string/add_contact"
            android:background="@android:color/transparent"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddContact" />
</LinearLayout>