<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <LinearLayout
                android:padding="@dimen/padding_medium"
                android:id="@+id/callListLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/userImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/padding_card_chat_list_half"
                    android:layout_gravity="center"
                    tools:srcCompat="@tools:sample/avatars" />
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:paddingLeft="@dimen/padding_medium"
                        android:paddingRight="@dimen/padding_medium"
                        android:paddingTop="@dimen/padding_medium"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/userTextView"
                            android:layout_width="0dp"
                            android:maxLines="1"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_user"
                            android:textStyle="bold"/>
                    <TextView
                            android:maxLines="1"
                            android:padding="@dimen/padding_card_chat_list_half"
                            android:textSize="12sp"
                            android:id="@+id/dateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_time"
                            android:textStyle="italic"
                            tools:ignore="SmallSp" />
                </LinearLayout>


                <LinearLayout
                        android:padding="@dimen/padding_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:id="@+id/durationTextView"
                            android:layout_width="0dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:text="@string/_3_minutes_23_seconds" />
                    <ImageView
                            android:layout_marginStart="@dimen/margin_medium"
                            android:layout_gravity="center"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/ic_missed_call_in"
                            android:src="@drawable/ic_missed_call_in"
                            android:id="@+id/callTypeImageView"/>
                </LinearLayout>

                <View
                        android:id="@+id/spacer"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" />
                <View
                        android:id="@+id/devider"
                        android:background="@drawable/devider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>